# TabQ-Website

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: build-docker-release.yml  update-frontend.yml
src/: error.rs  infomaniakmail.rs  magazines.rs  main.rs  workflow.rs
static/: index.html  main.js  robots.txt
static/alias/: index.html
static/blog/: csv_to_sn-spreadsheet.html  what_is_tabq.html
static/info/: code.js  contact.html  legal.html  style.css
static/magazines/: main.js
static/startpage/: code.js  dragging.js  index.html  shortcut.js  srf.html  style.css
