[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
http = "1.3.1"
reqwest = { version = "0.12.22", default-features = false, features = ["json", "rustls-tls", "charset", "http2", "stream"]}
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1.17"
tower = "0.5.2"
tower-http = { version = "0.6.1", features = ["fs"] }
