[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
futures-util = "0.3.31"
hex = "0.4.3"
hmac = "0.12.1"
http = "1.3.1"
reqwest = { version = "0.12.22", default-features = false, features = ["json", "rustls-tls", "charset", "http2", "stream"]}
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1.17"
tower = "0.5.2"
tower-http = { version = "0.6.1", features = ["fs"] }
